agregegamos texto a las tarjetas del home

--- a/home.html
+++ b/home.html
@@ -16,37 +16,53 @@
     <div class="blog-card">
       <img src="img/tanjiro zen.jpeg" alt="Imagen 2">
       <div class="blog-card-content">
-        <h2>Título del artículo 2</h2>
-        <p>Descripción corta del artículo 2.</p>
+        <h2>Tanjiro Zen</h2>
+        <p>Imagen relajante de tanjiro</p>
         <p class="date">12 de febrero de 2024</p>
       </div>
     </div>
     <div class="blog-card">
       <img src="img/tanjiro poder.gif" alt="Imagen 2">
       <div class="blog-card-content">
-        <h2>Título del artículo 2</h2>
-        <p>Descripción corta del artículo 2.</p>
+        <h2>Tanjiro contra Hantengu</h2>
+        <p>Lucha de Tanjiro</p>
         <p class="date">12 de febrero de 2024</p>
       </div>
     </div>
     <div class="blog-card">
       <img src="img/Zenitsu.jpg" alt="Imagen 2">
       <div class="blog-card-content">
-        <h2>Título del artículo 2</h2>
-        <p>Descripción corta del artículo 2.</p>
+        <h2>Zenitsu</h2>
+        <p>Cuando se desmaya, inconcientemente desata todo su poder, cuando está conciente tiene miedo todo el tiempo y llora mucho</p>
         <p class="date">12 de febrero de 2024</p>
       </div>
     </div>
     <div class="blog-card">
       <img src="img/Zenitsu habilidad.gif" alt="Imagen 2">
       <div class="blog-card-content">
-        <h2>Título del artículo 2</h2>
+        <h2>Primera Postura</h2>
+        <p>La primera postura se llama Destello del Relámpago y consiste en un desplazamiento increíblemente veloz hacia adelante con el que ataca a su rival</p>
+        <p class="date">12 de febrero de 2024</p>
+      </div>
+    </div>
+    <div class="blog-card">
+      <img src="img/inosuke.jpg" alt="Imagen 2">
+      <div class="blog-card-content">
+        <h2>Inosuke</h2>
+        <p>La historia de Inosuke es muy curiosa, pues éste fue criado por un jabalí, lo que le lleva a actuar en ocasiones de forma violenta e impetuosa. Es un cazador con una potencia física muy notable y una gran habilidad. Su rostro tiene rasgos femeninos y lo esconde bajo una cabeza de jabalí disecada</p>
+        <p class="date">12 de febrero de 2024</p>
+      </div>
+    </div>
+    <div class="blog-card">
+      <img src="img/inosuke slayer.jpg" alt="Imagen 2">
+      <div class="blog-card-content">
+        <h2>Espadas de Inosuke</h2>
         <p>Descripción corta del artículo 2.</p>
         <p class="date">12 de febrero de 2024</p>
       </div>
     </div>
     <div class="blog-card">
-      <img src="img/tanjiro zen.jpeg" alt="Imagen 2">
+      <img src="img/nezuko chibi.png" alt="Imagen 2">
       <div class="blog-card-content">
         <h2>Título del artículo 2</h2>
         <p>Descripción corta del artículo 2.</p>
@@ -54,23 +70,7 @@
       </div>
     </div>
     <div class="blog-card">
-      <img src="img/tanjiro zen.jpeg" alt="Imagen 2">
-      <div class="blog-card-content">
-        <h2>Título del artículo 2</h2>
-        <p>Descripción corta del artículo 2.</p>
-        <p class="date">12 de febrero de 2024</p>
-      </div>
-    </div>
-    <div class="blog-card">
-      <img src="img/tanjiro zen.jpeg" alt="Imagen 2">
-      <div class="blog-card-content">
-        <h2>Título del artículo 2</h2>
-        <p>Descripción corta del artículo 2.</p>
-        <p class="date">12 de febrero de 2024</p>
-      </div>
-    </div>
-    <div class="blog-card">
-      <img src="img/tanjiro zen.jpeg" alt="Imagen 2">
+      <img src="img/nezuko.gif" alt="Imagen 2">
       <div class="blog-card-content">
         <h2>Título del artículo 2</h2>
         <p>Descripción corta del artículo 2.</p>
